Removing xrefs and adding description to index files for initial conversion

--- a/copy-free/index.adoc
+++ b/copy-free/index.adoc
@@ -2,102 +2,11 @@
 permalink: copy-free/index.html
 sidebar: sidebar
 keywords: ontap, transition, copy, free, index
-summary: 'Index for the Copy-Free Transition Guide.'
+summary: "Describes how to transition from a 7-Mode HA pair to an ONTAP cluster using the 7-Mode Transition Tool, without having to copy data from disks; the existing disk shelves are connected to the new cluster."
 ---
 = Copy-Free Transition Guide
 :icons: font
 :imagesdir: ../media/
 
-* xref:concept_transition_overview.adoc[Transition overview]
- ** xref:concept_copy_free_transition_using_7mtt.adoc[Copy-free transition by using 7-Mode Transition Tool]
- ** xref:concept_transition_terminology.adoc[Transition terminology]
-* xref:concept_collecting_and_assessing_inventory_information.adoc[Collecting and assessing the inventory information]
- ** xref:concept_storage_and_host_version_requirements.adoc[Storage, host, and FC switches version requirements for transition assessment]
- ** xref:task_preparing_7_mode_systems_for_inventory_collection.adoc[Preparing the 7-Mode systems and hosts for transition assessment]
- ** xref:task_assessing_controllers_and_hosts.adoc[Assessing controllers and hosts]
-  *** xref:task_generating_an_assessment_report_by_adding_systems_to_7mtt.adoc[Generating an assessment report by adding systems to the 7-Mode Transition Tool]
-  *** xref:task_generating_an_assessment_report_by_importing_inventory_report_xml.adoc[Generating an assessment report by importing the inventory report XML]
- ** xref:task_generating_fc_zone_plan.adoc[Generating an FC zone plan]
-  *** xref:concept_supported_configurations_for_generating_an_fc_zone_plan.adoc[Supported configurations for generating an FC zone plan]
- ** xref:concept_how_you_can_use_assessment_executive_summary_for_transition_assessment.adoc[How you can use the assessment executive summary for transition assessment]
-* xref:task_copy_free_transition_workflow.adoc[Copy-free transition workflow]
- ** xref:concept_phases_of_copy_free_transition.adoc[Phases of copy-free transition]
-* xref:concept_preparing_for_migration.adoc[Preparing for copy-free transition]
- ** xref:concept_requirements_for_copy_free_transition.adoc[Requirements for copy-free transition]
- ** xref:reference_required_tools_and_documentation.adoc[Tools and documentation required for copy-free transition]
- ** xref:concept_port_requirements_for_communicating_with_7mtt.adoc[Port requirements for communicating with the 7-Mode Transition Tool]
- ** xref:task_preparing_7_mode_system_for_transition.adoc[Preparing the 7-Mode HA pair for transition]
- ** xref:task_setting_up_sp_or_rlm_for_transition.adoc[Setting up the SP or RLM on the 7-Mode systems for copy-free transition]
- ** xref:task_preparing_your_network_for_transition.adoc[Preparing the network for transition]
-  *** xref:concept_considerations_for_transitioning_7_mode_ip_addresses.adoc[Considerations for transitioning 7-Mode IP addresses]
- ** xref:task_preparing_cluster_for_transition.adoc[Preparing the cluster for transition]
- ** xref:task_gathering_cabling_information_for_transition.adoc[Gathering cabling information for transition]
-  *** xref:reference_copy_free_transition_cabling_worksheet.adoc[Copy-free transition cabling worksheet]
- ** xref:task_preparing_7_mode_volumes_and_aggregates_for_transition.adoc[Preparing 7-Mode aggregates and volumes for transition]
-  *** xref:concept_restrictions_for_copy_free_transition.adoc[Restrictions for transitioning 7-Mode aggregates and volumes]
-  *** xref:task_transitioning_to_clustered_ontap_8_3_from_a_7_mode_version_with_32_bit_data.adoc[Preparing for transitioning 7-Mode systems with 32-bit aggregates]
-   **** xref:task_expanding_an_aggregate_to_64_bit_format_without_adding_storage.adoc[Expanding an aggregate to the 64-bit format]
-   **** xref:task_finding_and_removing_32_bit_data_from_source_volumes_and_snapshot_copies.adoc[Finding and removing 32-bit volumes and Snapshot copies]
-  *** xref:concept_aggregate_space_considerations_during_transition.adoc[Aggregate space requirements for transition]
- ** xref:concept_preparing_for_name_services_transition.adoc[Preparing to transition name services]
-  *** xref:concept_supported_and_unsupported_name_services_configurations.adoc[Name services transition: supported and unsupported configurations, and required manual steps]
-  *** xref:concept_considerations_for_transitioning_dns_and_ldap_configurations.adoc[Considerations for transitioning DNS, NIS, and LDAP configurations]
-  *** xref:concept_considerations_for_transitioning_unix_users_and_groups.adoc[Considerations for transitioning netgroups and UNIX users and groups]
- ** xref:concept_preparing_for_nfs_transition.adoc[Preparing for NFS transition]
-  *** xref:concept_prerequisites_to_transition_nfs_configurations.adoc[Prerequisites for transitioning NFS configurations]
-  *** xref:concept_nfs_configurations_supported_unsupported_or_requiring_manual_steps_for_transition.adoc[NFS transition: supported and unsupported configurations, and required manual steps]
-  *** xref:concept_how_nfs_exports_are_transitioned.adoc[How NFS exports are transitioned]
- ** xref:concept_preparing_for_cifs_transition.adoc[Preparing for SMB/CIFS transition]
-  *** xref:concept_prerequisites_for_transitioning_cifs_configurations.adoc[Prerequisites for transitioning CIFS configurations]
-  *** xref:concept_cifs_configurations_supported_unsupported_or_requiring_manual_steps_for_transition.adoc[Supported and unsupported CIFS configurations for transition to ONTAP]
-  *** xref:concept_considerations_for_local_users_and_groups_transition.adoc[Considerations for transitioning CIFS local users and groups]
- ** xref:task_preparing_for_san_transition.adoc[Preparing for SAN transition]
-  *** xref:task_creating_san_lifs_before_transition.adoc[Creating SAN LIFs before transition]
-  *** xref:task_configuring_zones_by_using_fc_zone_plan.adoc[Configuring zones by using the FC zone plan]
-  *** xref:task_preparing_san_hosts_for_transition.adoc[Preparing SAN hosts for transition]
-  *** xref:concept_san_transition_supported_and_unsupported_configurations_and_required_manual_steps.adoc[SAN transition: supported and unsupported configurations, and required manual steps]
-  *** xref:concept_considerations_for_space_when_transitioning_san_volumes.adoc[Space considerations when transitioning SAN volumes]
- ** xref:concept_preparing_data_protection_features_for_transition.adoc[Preparing data protection features for transition]
-  *** xref:task_preparing_cluster_for_transitioning_volume_snapmirror_relationships.adoc[Preparing the cluster for transitioning volume SnapMirror relationships]
-  *** xref:concept_supported_and_unsupported_data_protection_relationships.adoc[Data protection transition: supported and unsupported configurations]
-* xref:task_performing_copy_free_transition_of_7_mode_aggregates.adoc[Transitioning 7-Mode aggregates using copy-free transition]
- ** xref:task_planning_a_copy_free_transition_project.adoc[Planning a copy-free transition project]
-  *** xref:reference_copy_free_transition_project_planning_worksheet.adoc[Copy-free transition project planning worksheets]
-  *** xref:task_adding_controllers_and_clusters.adoc[Adding controllers and clusters]
-  *** xref:task_selecting_source_7_mode_systems_for_transition.adoc[Creating a copy-free transition project]
-  *** xref:task_selecting_target_cluster_for_transition.adoc[Selecting the target cluster nodes for transition]
-  *** xref:task_svm_and_volume_mapping.adoc[Mapping SVMs and volumes]
-  *** xref:task_selecting_lifs_to_transition.adoc[Selecting LIFs for transition]
-  *** xref:task_customizing_configurations_for_transition.adoc[Customizing the transition of 7-Mode configurations]
-   **** xref:reference_example_consolidating_nfs_export_rules_for_transition.adoc[Examples of consolidating NFS export rules and Snapshot schedules for transition]
-  *** xref:task_running_prechecks.adoc[Running prechecks]
-   **** xref:concept_severity_levels_for_precheck_messages.adoc[Severity levels for precheck messages]
- ** xref:task_applying_svm_configurations.adoc[Applying SVM configurations]
- ** xref:task_verifying_readiness_for_cutover.adoc[Verifying that 7-Mode systems are ready for cutover]
- ** xref:task_exporting_7_mode_system_and_hardware_information.adoc[Exporting storage configurations and halting 7-Mode systems]
- ** xref:task_removing_disk_shelves_from_7_mode_and_connecting_to_cluster_nodes.adoc[Disconnecting disk shelves from the 7-Mode system and connecting to cluster nodes]
- ** xref:task_importing_7_mode_data_to_clustered_ontap.adoc[Importing 7-Mode data to ONTAP]
-* xref:task_completing_post_transition_tasks_for_a_copy_free_transition.adoc[Completing the transition]
- ** xref:concept_restrictions_during_preproduction_testing.adoc[Restrictions during preproduction testing]
- ** xref:task_rehosting_volumes_from_different_svms_to_a_single_svm.adoc[Rehosting transitioned volumes to a different SVM]
- ** xref:task_verifying_transition_configurations.adoc[Verifying the transitioned configurations]
- ** xref:task_performing_manual_configuration_tasks.adoc[Performing manual configuration tasks after transition]
- ** xref:task_testing_workloads_and_applications.adoc[Testing the workloads and applications]
- ** xref:task_committing_7_mode_aggregates_to_clustered_ontap_format.adoc[Committing the copy-free transition project]
-* xref:task_transitioning_a_snapmirror_relationship.adoc[Transitioning a SnapMirror relationship]
- ** xref:task_transitioning_primary_and_secondary_systems_of_a_snapmirror_relationship_in_staggered_way.adoc[Transitioning HA pairs in a SnapMirror relationship in a staggered configuration]
- ** xref:task_transitioning_primary_and_secondary_systems_of_a_snapmirror_relationship_in_parallel.adoc[Transitioning primary and secondary systems in a SnapMirror relationship in parallel]
-* xref:concept_troubleshooting_transition_issues.adoc[Troubleshooting transition issues]
- ** xref:task_acknowledging_errors_to_continue_with_transition.adoc[Continuing with the transition if ignorable errors occur]
-  *** xref:reference_ignorable_errors_during_transition.adoc[Ignorable errors during transition]
- ** xref:task_collecting_tool_logs.adoc[Downloading transition log files]
- ** xref:concept_log_files_for_7mtt.adoc[Log files for the 7-Mode Transition Tool]
- ** xref:task_recovering_from_a_failed_lun_transition.adoc[Recovering from a failed LUN transition]
- ** xref:reference_failed_to_boot_7_mode_controller_in_maintenance_mode.adoc[Failed to boot the 7-Mode controller in maintenance mode]
-* xref:concept_reverting_a_copy_free_transition_project.adoc[Performing a transition rollback to 7-Mode]
- ** xref:concept_when_to_revert_and_when_to_call_technical_support_transition.adoc[When to roll back a transition and when to call technical support]
- ** xref:task_performing_a_transition_rollback.adoc[Rolling back a copy-free transition project]
-  *** xref:task_running_manual_steps_for_rolling_back_transition.adoc[Manually rolling back the transition]
-* xref:reference_copyright_and_trademark.adoc[Copyright and trademark]
- ** xref:reference_copyright.adoc[Copyright]
- ** xref:reference_trademark.adoc[Trademark]
+[.lead]
+This guide describes how to transition from a 7-Mode HA pair to an ONTAP cluster using the 7-Mode Transition Tool, without having to copy data from disks; the existing disk shelves are connected to the new cluster.
