--- a/command-map/index.adoc
+++ b/command-map/index.adoc
@@ -2,16 +2,11 @@
 permalink: command-map/index.html
 sidebar: sidebar
 keywords: ontap, command, map, transition, index
-summary: 'Index for Command Map for 7-Mode Administrators Guide.'
+summary: "Maps 7-Mode commands to their equivalents in ONTAP"
 ---
 = Command Map for 7-Mode Administrators
 :icons: font
 :imagesdir: ../media/
 
-* xref:reference_how_7_mode_commands_map_to_clustered_ontap_commands.adoc[How 7-Mode commands map to ONTAP commands]
-* xref:reference_how_7_mode_options_map_to_clustered_ontap_commands.adoc[How 7-Mode options map to ONTAP commands]
-* xref:reference_how_7_mode_configuration_files_map_to_clustered_ontap_commands.adoc[How 7-Mode configuration files map to clustered Data ONTAP commands]
-* xref:concept_how_to_interpret_clustered_ontap_command_maps_for_7_mode_administrators.adoc[How to interpret the clustered Data ONTAP commands, options, and configuration files maps for 7-Mode administrators]
-* xref:reference_copyright_and_trademark.adoc[Copyright and trademark]
- ** xref:reference_copyright.adoc[Copyright]
- ** xref:reference_trademark.adoc[Trademark]
+[.lead]
+This guide maps 7-Mode commands to their equivalents in ONTAP.
