--- a/index.adoc
+++ b/index.adoc
@@ -1,7 +1,14 @@
 ---
-permalink: index.html
+layout: astra
 sidebar: sidebar
+permalink: index.html
+lead: 7-Mode Transition documentation includes information to help you install and setup the 7-Mode Transition Tool, transition data using SnapMirror commands, perform a copy-base or copy-free transition, collect information for transition, and complete pre/post transition procedures for SAN hosts.
+summary: 7-Mode Transition documentation includes information to help you install and setup the 7-Mode Transition Tool, transition data using SnapMirror commands, perform a copy-base or copy-free transition, collect information for transition, and complete pre/post transition procedures for SAN hosts.
 ---
-= 7-Mode Transition Documentation
 
-Welcome to the 7-Mode Transition Information Library. Here you will find documentation for 7-Mode Transition including how to install and setup the 7-Mode Transition Tool, how to transition data using SnapMirror commands, how to perform a copy-base or copy-free transition, how to collect information for transition, and pre/post transition procedures for SAN hosts.
+= 7-Mode Transition Documentation
+:hardbreaks:
+:nofooter:
+:icons: font
+:linkattrs:
+:imagesdir: ./media/
