--- a/snapmirror/task_transitioning_secondary_volume.adoc
+++ b/snapmirror/task_transitioning_secondary_volume.adoc
@@ -69,7 +69,7 @@ sec_cluster::> snapmirror show -destination-path dst_vserver:dst_c_vol
          Total Transfer Time in Seconds: 11
 ----
 
-  ... Go to <<STEP_33254BEE7D2648F0A9C08FF48CF8E0F3,#STEP_33254BEE7D2648F0A9C08FF48CF8E0F3>>.
+  ... Go to step 3.
 
 a|
 Perform scheduled update transfers
