--- a/san-host/concept_esxi_versions_and_features_supported_for_san_transitions_using_7mtt.adoc
+++ b/san-host/concept_esxi_versions_and_features_supported_for_san_transitions_using_7mtt.adoc
@@ -11,7 +11,7 @@ summary: 'Only certain versions and features of ESXi are supported for SAN trans
 [.lead]
 Only certain versions and features of ESXi are supported for SAN transitions using the 7-Mode Transition Tool (7MTT).
 
-The following versions and features are supported as listed in the Interoperability Matrix.
+The following versions and features are supported as listed in the link:https://mysupport.netapp.com/matrix[NetApp Interoperability Matrix Tool]
 
 * ESXi 5.0, 5.1, 5.5, and later
 +
@@ -22,7 +22,3 @@ You must upgrade hosts running ESX/ESXi 4.x or earlier to ESX/ESXi 5.0 or later 
 * RDM (RAW device map) devices
 * All Guest OS supported in the Interoperability Matrix
 * All SAN protocols (FC/FCoE/iSCSI)
-
-*Related information*
-
-https://mysupport.netapp.com/matrix[NetApp Interoperability Matrix Tool]
