--- a/san-host/task_bringing_windows_hosts_online_after_transition.adoc
+++ b/san-host/task_bringing_windows_hosts_online_after_transition.adoc
@@ -11,7 +11,7 @@ summary: 'After you transition your LUNs using the 7-Mode Transition Tool \(7MTT
 [.lead]
 After you transition your LUNs using the 7-Mode Transition Tool (7MTT) for Windows hosts, you must complete several steps to bring your host online and begin servicing data again.
 
-If you are doing a copy-free transition (CFT), procedures for `vol rehost` must be complete. See the link:https://review.docs.netapp.com/us-en/ontap-7mode-transition_catalyst-adoc/copy-free/index.html[7-Mode Transition Tool Copy-Free Transition Guide] for details.
+If you are doing a copy-free transition (CFT), procedures for `vol rehost` must be complete. See the link:https://docs.netapp.com/us-en/ontap-7mode-transition/copy-free/index.html[7-Mode Transition Tool Copy-Free Transition Guide] for details.
 
 * For copy-based transitions (CBTs), perform these steps after completing the Storage Cutover operation in the 7-Mode Transition Tool (7MTT).
 * For CFTs, perform these steps after completing the Import & Data Configuration operation in the 7MTT.
@@ -58,5 +58,3 @@ The physical disk number of the LUN corresponding to the pass-through device mig
 *Related information*
 
 xref:concept_what_the_inventory_collect_tool_is.adoc[What the Inventory Collect Tool is]
-
-http://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-7mtt-dctg/home.html[Copy-based transition]
