--- a/san-host/task_replacing_7_mode_wwids_on_linux_host_after_transition_of_luns.adoc
+++ b/san-host/task_replacing_7_mode_wwids_on_linux_host_after_transition_of_luns.adoc
@@ -13,7 +13,7 @@ After LUN transition, the 7-Mode LUN WWID changes. You must replace it with the 
 
 If you are doing a copy-free transition (CFT), then procedures for vol rehost must be complete.
 
-See the link:https://review.docs.netapp.com/us-en/ontap-7mode-transition_catalyst-adoc/copy-free/index.html[7-Mode Transition Tool Copy-Free Transition Guide_]for details.
+See the link:https://docs.netapp.com/us-en/ontap-7mode-transition/copy-free/index.html[7-Mode Transition Tool Copy-Free Transition Guide]for details.
 
 * For copy-based transitions (CBTs), perform these steps after completing the Storage cutover operation in the 7MTT.
 * For CFTs, perform these steps after the Import Data & Configuration operation in the 7MTT is complete.
@@ -80,7 +80,3 @@ dmmp_raw_lun (3600a098051764b2d4f3f453135452d31) dm-8 NETAPP, LUN C-Mode
  \_6:0:0:6 sdy 	65:128 [active][ready]
 	\_7:0:0:6 sdaa 65:160 [active][ready]
 ----
-
-*Related information*
-
-http://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-7mtt-dctg/home.html[Copy-based transition]
