--- a/copy-based/concept_preparing_for_metrocluster_configuration_transition.adoc
+++ b/copy-based/concept_preparing_for_metrocluster_configuration_transition.adoc
@@ -8,6 +8,10 @@ summary: 'Before transitioning to a MetroCluster configuration, you must underst
 :icons: font
 :imagesdir: ../media/
 
+//
+//10-June-2021, added github link for MCC fabrics
+//
+
 [.lead]
 Before transitioning to a MetroCluster configuration, you must understand the requirements and considerations for transitioning 7-Mode volumes to a MetroCluster configuration in ONTAP.
 
@@ -32,7 +36,9 @@ You should install the 7-Mode Transition Tool on each MetroCluster site and tran
 +
 It is best to share the switch fabrics only for the duration of the transition.
 +
-https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-mcc-inst-cnfg-fabric/home.html[Fabric-attached MetroCluster installation and configuration]
+https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-mcc-inst-cnfg-fabric/home.html[Fabric-attached MetroCluster installation and configuration, ONTAP 9.8 or earlier]
++
+https://docs.netapp.com/us-en/ontap-metrocluster/install-fc/index.html[Fabric-attached MetroCluster installation and configuration, ONTAP 9.9.1]
 
 * The cron job schedules created during transition are not replicated to the remote site, and therefore the negotiated switchover fails after transition.
 +
