--- a/copy-based/concept_supported_and_unsupported_name_services_configurations.adoc
+++ b/copy-based/concept_supported_and_unsupported_name_services_configurations.adoc
@@ -8,6 +8,10 @@ summary: 'You must be aware of the name services configurations that are transit
 :icons: font
 :imagesdir: ../media/
 
+//
+//10-Jun-2021, added networking github repo link
+//
+
 [.lead]
 You must be aware of the name services configurations that are transitioned by the 7-Mode Transition Tool. Some name services configurations are not transitioned to ONTAP because either these are not supported in ONTAP or these must be manually transitioned.
 
@@ -52,4 +56,6 @@ You must manually configure the following LDAP options on the SVMs:
 
 https://docs.netapp.com/ontap-9/topic/com.netapp.doc.cdot-famg-nfs/home.html[NFS management]
 
-https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-nmg/home.html[Network and LIF management]
+https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-nmg/home.html[Network and LIF management/ONTAP 9.7 and earlier]
+
+https://docs.netapp.com/us-en/ontap/networking/index.html[Network and LIF management/ONTAP 9.8 and later]
