--- a/copy-free/task_transitioning_primary_and_secondary_systems_of_a_snapmirror_relationship_in_parallel.adoc
+++ b/copy-free/task_transitioning_primary_and_secondary_systems_of_a_snapmirror_relationship_in_parallel.adoc
@@ -8,6 +8,10 @@ summary: 'You can transition the primary and secondary HA pairs that contain the
 :icons: font
 :imagesdir: ../media/
 
+//
+//update system manager to github link
+//
+
 [.lead]
 You can transition the primary and secondary HA pairs that contain the volumes of a 7-Mode SnapMirror relationship in parallel. You must then manually set up the volume SnapMirror relationship in clustered Data ONTAP after transition. The SnapMirror relationship is retained after transition without requiring a rebaseline.
 
@@ -54,6 +58,6 @@ xref:task_committing_7_mode_aggregates_to_clustered_ontap_format.adoc[Committing
 
 http://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-cmpr/GUID-5CB10C70-AC11-41C0-8C16-B4D0DF916E9B.html[ONTAP 9 commands]
 
-https://docs.netapp.com/ontap-9/topic/com.netapp.doc.onc-sm-help/GUID-DF04A607-30B0-4B98-99C8-CB065C64E670.html[Cluster management using System Manager]
+https://docs.netapp.com/us-en/ontap/[System Manager]
 
 [dot-cm-dpg]
