--- a/copy-free/task_transitioning_primary_and_secondary_systems_of_a_snapmirror_relationship_in_staggered_way.adoc
+++ b/copy-free/task_transitioning_primary_and_secondary_systems_of_a_snapmirror_relationship_in_staggered_way.adoc
@@ -8,6 +8,10 @@ summary: 'You can transition the secondary HA pair first, set up a staggered Sna
 :icons: font
 :imagesdir: ../media/
 
+//
+//Update 7MTT for snapmirror
+//
+
 [.lead]
 You can transition the secondary HA pair first, set up a staggered SnapMirror relationship between the 7-Mode primary volumes and ONTAP secondary volumes, and then transition the primary HA pair later.
 
@@ -70,6 +74,6 @@ xref:task_committing_7_mode_aggregates_to_clustered_ontap_format.adoc[Committing
 
 *Related information*
 
-https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-7mdt-sm/home.html[7-Mode data transition using SnapMirror]
+http://docs.netapp.com/us-en/ontap-7mode-transition/snapmirror/index.html[7-Mode data transition using SnapMirror]
 
 http://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-cmpr/GUID-5CB10C70-AC11-41C0-8C16-B4D0DF916E9B.html[ONTAP 9 commands]
